--- a/report/contents/issues.tex
+++ b/report/contents/issues.tex
@@ -1,1 +1,3 @@
 \chapter{Legal, Social, Ethical and Professional Issues} \label{ch:issues}
+
+The implementation of \acrfull{drl} algorithms to perform profitable portfolio allocation raises several legal, social, ethical and professional issues that must be considered. The incorporation of post-hoc explainable techniques to understand, interpret and clarify the decision-making process of these algorithms is a crucial step towards addressing these. This chapter will explore these concerns in detail, highlighting remediating circumstances and potential solutions.
